# ffmpeg-video-player

./: CMakeLists.txt  README.md
Modules/: FindFFMPEG.cmake  FindSDL2.cmake
audio_encode/: CMakeLists.txt  main.c
player/: CMakeLists.txt
resampling/: CMakeLists.txt  main.c
tutorial01/: CMakeLists.txt
tutorial02/: CMakeLists.txt
tutorial03/: CMakeLists.txt
tutorial04/: CMakeLists.txt
tutorial07/: CMakeLists.txt  tutorial07.c
tutorial08/: CMakeLists.txt  ReadMe.md  tutorial08.c
